--- a/index.html
+++ b/index.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
-<head></head>
+<head>
+    <link ref="stylesheet" href="style.css">
+</head>
 <body>
     <h1> 
         Hello World!
     </h1>
     <p>
-        I'm hosted with GitHub pages
+        As cheesy as it is, I think it's a great way to greet anyone interested in my web-development journey.
+        My hope is to gain these skills to create a blog in which I can track my growth and achievements as I
+        grow as both a sewist and a coder. I'm not wholly unfamiliar with coding (I was originally a comp. sci major),
+        but sewing with a machine is relatively new. I'm excited to share the things I learn and have an artifact I can
+        look back on later on in the future. This will be like a journal for myself to reminisce on, and hopefully a way
+        to foster community with like-minded individuals. 
     </p>
 </body>
