--- a/index.html
+++ b/index.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
-<head>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    <h1> 
-        Hello World!
-    </h1>
-    <p>
-        As cheesy as it is, I think it's a great way to greet anyone interested in my web-development journey.
-        My hope is to gain these skills to create a blog in which I can track my growth and achievements as I
-        grow as both a sewist and a coder. I'm not wholly unfamiliar with coding (I was originally a comp. sci major),
-        but sewing with a machine is relatively new. I'm excited to share the things I learn and have an artifact I can
-        look back on later on in the future. This will be like a journal for myself to reminisce on, and hopefully a way
-        to foster community with like-minded individuals. 
-    </p>
-</body>
+<html>
+    <head>
+        <link rel="stylesheet" href="styles.css">
+        <meta charset="utf-8"
+    </head>
+    <body>
+        <h1> 
+            Hello World!
+        </h1>
+        <p>
+            As cheesy as it is, I think it's a great way to greet anyone interested in my web-development journey.
+            My hope is to gain these skills to create a blog in which I can track my growth and achievements as I
+            grow as both a sewist and a coder. I'm not wholly unfamiliar with coding (I was originally a comp. sci major),
+            but sewing with a machine is relatively new. I'm excited to share the things I learn and have an artifact I can
+            look back on later on in the future. This will be like a journal for myself to reminisce on, and hopefully a way
+            to foster community with like-minded individuals. 
+        </p>
+    </body>
+</html>
