--- a/index.html
+++ b/index.html
@@ -16,5 +16,25 @@
             look back on later on in the future. This will be like a journal for myself to reminisce on, and hopefully a way
             to foster community with like-minded individuals. 
         </p>
+        <h2>
+            June 8, 2025
+        </h2>
+        <p>
+            I woke up at 5:30 this morning to the sound of my petulent phone's alarm. I spent the night out with a friend from
+            high school, so four hours of sleep and a mild hangover were not circumstances to wake up to. What's worse is that
+            I'd slept with my phone in my bed, so finding the 2020 iPhone SE was a chore in and of itself. It had fallen off my
+            bed onto the floor between my Queen-sized and the wall. By the time I was able to shut off the loud, almost mocking,
+            ringtone, sleepiness had left my body. 
+            I know this doesn't have much to do with coding or sewing, but I think the contexts in which I decide to sew
+            and code are maybe just as important as the coding and sewing itself. Everything about my environment and mood
+            influences my so-called productivity, so just writing about how a day might have started off rough and still finding
+            time to dedicate to the things that I am interested in learning maybe shows that any circumstance is a good circumstance
+            to grow. Of course there exists extenuating circumstances where maybe breaks are needed, but those are not mine for now.
+            At least, I don't believe so.
+            <strong><em>ANYWAY</em></strong>, today I am planning on redoing my first ever sewing project. It's a tote bag.
+            The first tote bag I'd made came out a little wonky, I didn't backstitch or finish any of the seams, but I felt immense
+            pride about being able to sew something all by myself. Or, at least, I found a good <a href="https://www.youtube.com/watch?v=6cjz3oGVdRI&list=PL8pZeN5wmVXgHtMD_Yh4HavpXWoLcyAnP&ab_channel=SydneyGraham">
+            video series</a> to follow along with haha.
+        </p>
     </body>
 </html>
