--- a/index.html
+++ b/index.html
@@ -33,8 +33,12 @@
             At least, I don't believe so.
             <strong><em>ANYWAY</em></strong>, today I am planning on redoing my first ever sewing project. It's a tote bag.
             The first tote bag I'd made came out a little wonky, I didn't backstitch or finish any of the seams, but I felt immense
-            pride about being able to sew something all by myself. Or, at least, I found a good <a href="https://www.youtube.com/watch?v=6cjz3oGVdRI&list=PL8pZeN5wmVXgHtMD_Yh4HavpXWoLcyAnP&ab_channel=SydneyGraham">
+            pride about being able to sew something all by myself. Or, at least, I found a good <a href="https://www.youtube.com/watch?v=6cjz3oGVdRI&list=PL8pZeN5wmVXgHtMD_Yh4HavpXWoLcyAnP&ab_channel=SydneyGraham" target="_blank">
             video series</a> to follow along with haha.
+            If I'm honest, at first I did think that Sydney did talk quite a lot, but she has a really lovely personality and it's 
+            obvious that she's passionate about sewing. I think it might be more accurate to say that my attention span was not used
+            to trying to really suck in new information from people from the internet. I am a product of the 2000s and one of the
+            first iPad babies.         
         </p>
     </body>
 </html>
