--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
             June 8, 2025
         </h2>
         <p>
+            If you want to get straight into sewing, I understand that. My coding skills aren't great yet, so just look for when the
+            text turns pink.
+            </thead>
             I woke up at 5:30 this morning to the sound of my petulent phone's alarm. I spent the night out with a friend from
             high school, so four hours of sleep and a mild hangover were not circumstances to wake up to. What's worse is that
             I'd slept with my phone in my bed, so finding the 2020 iPhone SE was a chore in and of itself. It had fallen off my
@@ -39,6 +42,25 @@
             obvious that she's passionate about sewing. I think it might be more accurate to say that my attention span was not used
             to trying to really suck in new information from people from the internet. I am a product of the 2000s and one of the
             first iPad babies.         
+        </p>
+        <p>
+            If you're like me and don't really want to do all that much reading or watch YouTube video after YouTube video to get started,
+            I feel you. Capitalism and social media kills brain cells and patience. 
+            <section><h3>Here are the tools I needed to get started:
+            <ul>
+                <li>cutting mat (24"x36")</li>
+                <li>sewing machine <em>duh</em></li>
+                <li>thread</li>
+                <li><strong>rotary cutter</strong> and/or scissors</li>
+                <li>1 yard fabric for the exterior</li>
+                <li>1 yard fabric for the lining</li>
+                <li>iron</li>
+                <li>straight edge</li>
+                <li>hot ruler</li>
+                <li>pins AND/OR clips</li>
+                <li>tailor's chalk OR hera marker</li>
+            </ul>
+            </h3></section>
         </p>
     </body>
 </html>
